--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body{
 
 *{
     font-family: 'Alatsi', sans-serif;
+    text-align: center;
 }
 
 #contentdiv{
@@ -414,7 +415,7 @@ header a{
     -webkit-transform: scale(1);
     -ms-transform: scale(1);
     transform: scale(1); }
-    
+
     @media (max-width: 450px) {
     .gallery {
     -webkit-column-count: 1;
@@ -425,7 +426,7 @@ header a{
     column-width: 100%;
     }
     }
-    
+
     @media (max-width: 400px) {
     .btn.filter {
     padding-left: 1.1rem;
